# XiMusic

./: CMakeCache.txt  CMakeLists.txt  CNAME  Doxyfile  Makefile  README.md  annotated.html  annotated_dup.js  audioEffect_8h.html  audioEffect_8h.js  audioEffect_8h_source.html  audioLoader_8h.html  audioLoader_8h.js  audioLoader_8h_source.html  audioPlayer_8h.html  audioPlayer_8h.js  audioPlayer_8h_source.html  audioResampler_8h.html  audioResampler_8h.js  audioResampler_8h_source.html  classes.html  cmake_install.cmake  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  implementation-handler.cmake  index.html  main_8c.html  navtreedata.js  navtreeindex0.js  preset-handler.cmake  structAudioChunk-members.html  structAudioChunk.html  (+19 more)
.github/workflows/: cmake.yml  docs.yml
depends/: sds.cmake
doc_doxygen/html/: annotated.html  audioLoader_8h.html  audioPlayer_8h_source.html  audioResampler_8h_source.html  classes.html  files.html  functions.html  menudata.js  structaudioEffect-members.html  structeffectTreble-members.html  (+2 more)
docs/: Doxyfile.in  docs.cmake
search/: all_0.js  all_1.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  enums_0.js  enums_1.js  files_0.js  functions_1.js  functions_2.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
src/: audioEffect.h  audioLoader.h  audioPlayer.h  audioResampler.h  main.c
(+44 files in other folders)
